--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-template",
+	"name": "dubois2024-challenge02",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -21,7 +21,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"d3-dsv": "^3.0.1",
-		"svelte-select": "^5.7.0"
+		"d3-dsv": "^3.0.1"
 	}
 }
